[package]
name = "esp-zerobot-nostd"
version = "0.1.0"
authors = ["Vasily Khoruzhick <anarsoul@gmail.com>"]
edition = "2021"
license = "MIT"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
default = ["pid"]
pid = []

[dependencies]
critical-section = "1"
embassy-executor = "0.10.0"
embassy-futures = "0.1.2"
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
esp-alloc = "0.10.0"
esp-backtrace = { version = "0.19.0", features = [
    "esp32c3",
    "panic-handler",
    "println",
] }
esp-bootloader-esp-idf = { version = "0.5.0", features = [ "esp32c3" ] }
esp-hal = { version = "1.1.1", features = [ "esp32c3", "unstable" ] }
esp-rtos = { version = "0.3.0", features = [
    "embassy",
    "esp-alloc",
    "esp32c3",
    "log-04",
] }
esp-println = { version = "0.17.0", features = ["esp32c3", "log-04"] }
hcsr04_async = "0.5.0"
log = { version = "0.4.29" }
portable-atomic = "1"
smart-leds = "0.4.0"
static_cell = { version = "2.1.1" }
tcs3472 = { version = "1.0.0", features = [ "async" ] }
ws2812-spi = "0.5.1"
